--- a/resources/css/calender.css
+++ b/resources/css/calender.css
@@ -24,6 +24,7 @@ td:active{
 }
 td:hover,th:hover{
     background-color: lightseagreen;
+    cursor: pointer;
 }
 .faded{
     background-color: darkgray;
